--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/pavanskipo/lydia_assistant#readme",
   "dependencies": {
-    "fs": "0.0.1-security",
+    "file-system": "^2.2.2",
     "readline-sync": "^1.4.9",
     "shelljs": "^0.8.3"
   }
