--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/pavanskipo/lydia_assistant#readme",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "file-system": "^2.2.2",
     "readline-sync": "^1.4.9",
     "shelljs": "^0.8.3"
